fix styling and spacing for header and footer

--- a/src/App.css
+++ b/src/App.css
@@ -11,9 +11,7 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: center;
-
-  height: 100%;
-  height: calc(var(--vh, 1vh) * 100);
+  min-height: 100%;
 }
 
 :root {
