--- a/src/components/pages/home/home.css
+++ b/src/components/pages/home/home.css
@@ -1,5 +1,5 @@
 h1 {
-    /* color: var(--accentgreen); */
+    margin-top: 20vh;
 }
 
 h3 {
