--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,9 @@ body {
   /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
+  max-height: 100vh;
   background-color: var(--darkgreen);
+  /* overflow: hidden; */
 }
 
 h1 {
